CHANGELOG

>>BUILD 24.07.10
* New creative inventory items and blocks order
* New achievement system: hundreds of new achievements
* New Valyria region, reworked from scratch
* New economics: silver, gold, valyrian steel and different gems now has fixed prices world-wide.

+ Added DRACARYS FOR DRAGONS!

+ Added full translations for all supported languages
+ Added NEI support for millstone
+ Added beavers (with their spawn) and their drop (with its usage)
+ Added Janos Slynt's, Pycelle's and Melisandra's drop
+ Added new world type - Game of Thrones without fixed structures and characters, but with map.
+ Added one forgotten dirtPath:2 recipe
+ Added crafts for stone chest, sandstone chest and replaced the craft of reeds chest with new one.
+ Added a few achievements
+ Added more tooltips for items with mechanics description
+ Added new and removed old military mobs to make factions more balanced
+ Added new ifekevron skins
+ Added sandstone chests, ice & obsidian stalactites to natural spawn
+ Added targaryen items, lannicter brooch and silver hand brooch to natural drop

* Improved asshai staffs' target selectors
* Improved wiki-generator
* Improved blizzards' drop, AI and alignment bonus
* Improved mob selector for smoking, drinking, being robbed and being married.
* Improved sound and volume of a few animals
* Improved fixed structures system (more clear, optimized and stable)
* Improved road-to-settlement's-gate system
* Improved roads & walls code
* Improved GUI opening code
* Improved unit costs
* Improved dragon and wikigen command tab completion
* Improved animal stats
* Improved mobs' immune to frost/heat
* Improved speech and translations
* Improved unit prices
* Improved beech door texture
* Improved midges and butterflies: they can't spawn in winter now
* Improved balance of +alignment values for killing
* Improved biome visit achievements and achievement shields: now require more biomes and achievements.

* Oprimized concrete and concrete powder